# docs/swagger.json
@@ -2059,8 +2059,8 @@
             "required": [
                 "benefits",
                 "duration_days",
+                "final_price",
                 "name",
-                "price",
                 "type"
             ],
             "properties": {
@@ -2078,11 +2078,11 @@
                 "duration_days": {
                     "type": "integer"
                 },
+                "final_price": {
+                    "type": "number"
+                },
                 "name": {
                     "type": "string"
-                },
-                "price": {
-                    "type": "number"
                 },
                 "sort_order": {
                     "type": "integer"
@@ -2234,14 +2234,14 @@
                 "duration_days": {
                     "type": "integer"
                 },
+                "final_price": {
+                    "type": "number"
+                },
                 "is_active": {
                     "type": "boolean"
                 },
                 "name": {
                     "type": "string"
-                },
-                "price": {
-                    "type": "number"
                 },
                 "sort_order": {
                     "type": "integer"
